--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
-body{
-	background-color: gray;
+/* navbar navbar-expand-lg navbar-light bg-light{
+    margin-top: auto;
+} */
+nav{
+    background-color: aqua;
+    
 }
